--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@
     --light-brown: #f1dabf;
     /* --primary-cta: #c98766; */
     --primary-cta: #af6e4d;
+    --primary-cta-hover: #b98064;
     --secondary-light-color: #cccccc;
     --sm-text: #d1d1d1;
     /* --dark-sm-text: rgb(12, 6, 6); */
@@ -203,7 +204,7 @@ li {
 }
 
 .menuContent.openActive {
-    transform: translatex(0);
+    transform: translateX(0);
 }
 
 .menuLogo {
@@ -299,16 +300,6 @@ li {
     opacity: 1;
 }
 
-@keyframes load {
-    from {
-        height: 100%;
-    }
-
-    to {
-        height: 0;
-    }
-}
-
 .closeBtn {
     display: flex;
     align-items: center;
@@ -326,6 +317,17 @@ li {
 .menuLinks li,
 .smallLinks li {
     opacity: 0;
+}
+
+/* ANIMATION */
+@keyframes load {
+    from {
+        height: 100%;
+    }
+
+    to {
+        height: 0;
+    }
 }
 
 @keyframes fade {
@@ -403,3 +405,298 @@ body.bodyMenuOpen {
 .mobileSocial li a {
     margin-left: 1rem;
 }
+
+/* MAIN HERO */
+.main-hero {
+    height: 100vh;
+    position: relative;
+    width: 93%;
+    margin-left: auto;
+    margin-top: 5rem;
+    overflow: hidden;
+}
+
+.home-image-1,
+.home-image-2 {
+    height: 80vh;
+    width: 30%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 5px;
+    z-index: -1;
+}
+
+.home-image-2 {
+    right: 32%;
+}
+
+.home-image-1 img,
+.home-image-2 img {
+    border-radius: 3px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.home-image-1::after,
+.home-image-2::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(4, 3, 15, 0.3)
+}
+
+.main-title {
+    font-size: 5.8rem;
+    z-index: 5;
+    line-height: 1;
+    font-weight: 600;
+    letter-spacing: 2.8px;
+    padding-top: 2rem;
+}
+
+.main-sub {
+    width: 33%;
+    font-weight: 500;
+    font-size: 1.3rem;
+    margin: 1rem 0 2.8rem 0;
+}
+
+/* ANIMATION */
+@keyframes outer-left {
+    from {
+        transform: translateX(40%);
+    }
+
+    to {
+        transform: none;
+    }
+}
+
+@keyframes inner-left {
+    from {
+        transform: translateX(-45%);
+    }
+
+    to {
+        transform: none;
+    }
+}
+
+@keyframes text-clip {
+    from {
+        clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%)
+    }
+
+    to {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
+}
+
+@keyframes image-in {
+    from {
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+
+    to {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
+}
+
+.animation-main-title-container,
+.animation-sub-container,
+.btn-animation {
+    animation: outer-left 1s 1s cubic-bezier(0.5, 0, 0.1, 1) both;
+}
+
+.main-hero-title-inner {
+    animation: inner-left 1s 1s ease both;
+}
+
+.animation-title {
+    display: inline-block;
+    animation: inner-left 1s 1s ease both, text-clip 1s 0s cubic-bezier(0.5, 0, 0.1, 1) both;
+}
+
+.animation-sub {
+    animation: inner-left 1s 1s ease both, text-clip 1s 0s cubic-bezier(0.5, 0, 0.1, 1) both;
+}
+
+.main-hero-title {
+    animation: outer-left 1s 1s ease both;
+}
+
+.home-image-2 {
+    animation: image-in 1s cubic-bezier(0.5, 0, 0.1, 1) 0.9s backwards;
+}
+
+.home-image-1 {
+    animation: image-in 1s cubic-bezier(0.5, 0, 0.1, 1) 1s backwards;
+}
+
+/* Button */
+.btn {
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    padding: 0.6rem 3rem;
+    color: var(--light-color);
+    display: inline-block;
+    background: var(--primary-cta);
+    border-radius: 0 20px 20px 30px;
+    position: relative;
+    cursor: pointer;
+    z-index: 1;
+    transition: 0.3s ease;
+}
+
+.btn:hover {
+    background: var(--primary-cta-hover);
+    border-radius: 20px 20px 20px 20px;
+}
+
+/* MEDIA QUERIES */
+@media all and (max-width:1024px) {
+    .container {
+        width: 95%;
+    }
+
+    /* NAVBAR */
+    .menu-title {
+        font-size: 1.5rem;
+    }
+
+    .main-title {
+        font-size: 5.5rem;
+    }
+
+    .main-sub {
+        font-size: 1.5rem;
+    }
+}
+
+@media all and (max-width: 1050px) {}
+
+@media all and (max-width: 924px) {
+    .home-image-1 {
+        display: none;
+    }
+
+    .home-image-2 {
+        position: absolute;
+        right: 0;
+        width: 50%;
+    }
+
+    .main-title {
+        font-size: 4.5rem;
+    }
+
+    .main-sub {
+        width: 45%;
+        font-size: 1.2rem;
+        font-weight: 400;
+        margin: 1rem 0 2.5rem 0
+    }
+
+    .menuLinks {
+        position: relative;
+    }
+
+    .menuLogo {
+        height: 3.5rem;
+        top: 2rem;
+        left: 3rem;
+    }
+
+    /* =========================================== */
+    .menu-links,
+    .smallLinks,
+    .menuContent-img {
+        /* display: none; */
+    }
+
+    .mobile-links-container {
+        display: block;
+        width: 100%;
+    }
+}
+
+@media all and (max-width: 768px) {
+    .menu-title {
+        font-size: 4.5rem;
+    }
+
+    .main-sub {
+        width: 50%;
+    }
+}
+
+@media all and (max-width: 670px) {
+    .main-title {
+        font-size: 4rem;
+    }
+}
+
+@media all and (max-width: 580px) {
+    .main-title {
+        font-size: 3.8rem;
+    }
+
+    .menu-title {
+        font-size: 3.8rem;
+    }
+
+    .home-image-2 {
+        height: 60vh;
+    }
+
+    .mobile-links .mobile-link a {
+        font-size: 36px;
+    }
+
+    .mobileSmallLinks .mobile-link a {
+        font-size: 18px;
+    }
+
+    .sideContent span,
+    .mobileSocial li a {
+        font-size: 14px;
+    }
+
+    .menuLogo {
+        left: 50%;
+        transform: translate(-50%);
+    }
+
+    .closeBtn span {
+        font-size: 14px;
+    }
+
+    .sideContent {
+        left: 1rem;
+    }
+
+    .mobileSocial {
+        right: 1rem;
+    }
+
+    .mobileSocial li a {
+        margin-left: 0.5rem;
+    }
+}
+
+@media all and (max-width: 520px) {}
+
+@media all and (max-width: 480px) {
+    .menu-title {
+        font-size: 2.7rem;
+    }
+}
+
+@media all and (max-width: 380px) {}
