--- a/styles/style.css
+++ b/styles/style.css
@@ -69,9 +69,22 @@ body {
     /* height: 200vh; */
 }
 
+.light-body {
+    background-color: var(--light--bg-color);
+    color: var(--dark-color);
+}
+
+.light-body a {
+    color: var(--dark-color);
+}
+
 .container {
     width: 90%;
     margin: auto;
+}
+
+section {
+    padding: 5rem 0;
 }
 
 a {
@@ -88,6 +101,10 @@ li {
     height: 100%;
     object-fit: cover;
 } */
+
+.border-radius-img {
+    border-radius: var(--border-radius);
+}
 
 /* Scroll to TOP BTN */
 .scrollToTop-btn {
@@ -560,6 +577,88 @@ body.bodyMenuOpen {
     border-radius: 20px 20px 20px 20px;
 }
 
+/* our servings service */
+.section-title {
+    font-family: var(--serif-font);
+    font-size: 3.2rem;
+    font-weight: 700;
+    text-align: center;
+}
+
+.serve-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.serve-card {
+    display: inline-block;
+    height: 22rem;
+    width: 22rem;
+    background: var(--light--bg-color);
+    position: relative;
+    margin: 1.3rem 0.7rem;
+
+    box-shadow: 0 8px 15px rgba(112, 144, 176, 20%);
+    transition: 0.3s ease;
+}
+
+.serve-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.serve-category {
+    position: absolute;
+    bottom: -0.8rem;
+    left: 50%;
+    text-align: center;
+    height: 3rem;
+    background: var(--secondary-black);
+    color: var(--light-color);
+    transform: translateX(-50%);
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 2px 2px rgba(212, 209, 209, 0.571);
+}
+
+.serve-category span {
+    text-transform: capitalize;
+    font-size: 1.1rem;
+}
+
+.js-scroll {
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.js-scroll.scrolled {
+    opacity: 1;
+}
+
+.scrolled.fade-in-bottom {
+    animation: fade-in-bottom 1s ease-in-out both;
+}
+
+@keyframes fade-in-bottom {
+    0% {
+        -webkit-transform: translateY(50px);
+        opacity: 0;
+        transform: translateY(50px);
+    }
+
+    100% {
+        -webkit-transform: translateY(0);
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 /* MEDIA QUERIES */
 @media all and (max-width:1024px) {
     .container {
@@ -577,6 +676,10 @@ body.bodyMenuOpen {
 
     .main-sub {
         font-size: 1.5rem;
+    }
+
+    .section-title {
+        font-size: 2.5rem;
     }
 }
 
@@ -635,11 +738,28 @@ body.bodyMenuOpen {
     .main-sub {
         width: 50%;
     }
+
+    .serve-card {
+        width: 70%;
+    }
+
+    .serve-category span {
+        font-size: 1rem;
+    }
+
+    .btn {
+        padding: 0.5rem 2.5rem;
+        font-size: 1rem;
+    }
 }
 
 @media all and (max-width: 670px) {
     .main-title {
         font-size: 4rem;
+    }
+
+    .btn {
+        font-size: 14px;
     }
 }
 
@@ -688,6 +808,10 @@ body.bodyMenuOpen {
 
     .mobileSocial li a {
         margin-left: 0.5rem;
+    }
+
+    .section-title {
+        font-size: 2.3rem;
     }
 }
 
