--- a/styles/style.css
+++ b/styles/style.css
@@ -142,6 +142,14 @@ li {
     letter-spacing: 0.3px;
 }
 
+.md-title {
+    font-family: var(--main-font);
+    font-size: 2rem;
+    line-height: 1.6;
+    color: var(--sm-text);
+    letter-spacing: 0.3px;
+}
+
 .paragraph {
     margin-bottom: 1rem;
 }
@@ -152,6 +160,10 @@ li {
     font-size: 1.2rem;
     line-height: 1.6;
     letter-spacing: 0.8px;
+}
+
+.light-body .md-title {
+    color: var(--dark-color);
 }
 
 .light-body .section-sub {
@@ -823,7 +835,68 @@ body.bodyMenuOpen {
     border-radius: 10px;
 }
 
+/* PROFESSIONALS */
+.professional-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 5%;
+}
+
+.professional-text {
+    width: 45%;
+}
+
+.professional-img {
+    width: 60%;
+}
+
+.professional-text .sm-text {
+    margin-bottom: 1.8rem;
+}
+
+.prof-img {
+    width: 100%;
+    height: 15rem;
+}
+
+.prof-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* border-radius: 10px; */
+}
+
+.professional-1,
+.professional-2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4%;
+    margin-bottom: 2rem;
+}
+
+.pro-img-container {
+    width: 50%;
+}
+
+.prof-detail {
+    width: 50%;
+}
+
+.prof-category {
+    font-weight: 500;
+}
+
+.prof-text {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    font-weight: 500;
+}
+
 /* MEDIA QUERIES */
+@media all and (max-width: 1050px) {}
+
 @media all and (max-width:1024px) {
     .container {
         width: 95%;
@@ -881,9 +954,35 @@ body.bodyMenuOpen {
     .home-about-img {
         height: 20rem;
     }
-}
 
-@media all and (max-width: 1050px) {}
+    .professional-content {
+        flex-direction: column;
+    }
+
+    .professional-img {
+        display: flex;
+        margin-top: 5rem;
+    }
+
+    .professionals {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .prof-img-container {
+        width: 80%;
+    }
+
+    .prof-detail {
+        width: 80%;
+        height: 16rem;
+    }
+
+    .prof-img {
+        margin-bottom: 2rem;
+    }
+}
 
 @media all and (max-width: 924px) {
     .home-image-1 {
@@ -969,6 +1068,17 @@ body.bodyMenuOpen {
     .book {
         font-size: 3rem;
         margin-bottom: 2rem;
+    }
+
+    .professional-img {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .professionals {
+        width: 100%;
+        margin-bottom: 0.5rem;
+        gap: 0;
     }
 }
 
