--- a/styles/style.css
+++ b/styles/style.css
@@ -1465,6 +1465,10 @@ body.bodyMenuOpen {
         padding: 0.5rem 2.5rem;
         font-size: 1rem;
     }
+
+    .about-us-image {
+        display: none;
+    }
 }
 
 @media all and (max-width: 670px) {
