--- a/src/pages/home/home-page.css
+++ b/src/pages/home/home-page.css
@@ -7,7 +7,7 @@
   color: white;
   padding: 60px 0;
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 .hero-section h1 {
@@ -20,6 +20,41 @@
   max-width: 600px;
   margin: 0 auto;
   color: #ddd;
+}
+
+.top-rated-restro {
+  margin-bottom: 15px;
+}
+
+.btn-restro-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.restaurant-filter-btns {
+  background: #e63946;
+  color: white;
+  font-family: inherit;
+  padding: 0.35em;
+  padding-left: 1.2em;
+  font-size: 17px;
+  font-weight: 500;
+  border-radius: 0.9em;
+  border: none;
+  letter-spacing: 0.05em;
+  display: flex;
+  align-items: center;
+  box-shadow: inset 0 0 1.6em -0.6em #714da6;
+  overflow: hidden;
+  position: relative;
+  height: 2.8em;
+  padding-right: 3.3em;
+  cursor: pointer;
+}
+
+.restaurant-filter-btns:hover {
+  box-shadow: inset 0 0 1.6em -0.6em #e63946;
 }
 
 .featured-restaurants,
