--- a/src/components/search-bar/searchbar.css
+++ b/src/components/search-bar/searchbar.css
@@ -75,6 +75,13 @@
   font-weight: 500;
 }
 
+.suggestion-image {
+  width: 30px;
+  height: 30px;
+  border-radius: 80%;
+  margin-right: 10px;
+}
+
 @media (max-width: 768px) {
   .search-bar {
     max-width: 100%;
