--- a/src/components/restaurant-card/restaurant-card.css
+++ b/src/components/restaurant-card/restaurant-card.css
@@ -18,7 +18,8 @@
 
 .restaurant-image img {
   width: 100%;
-  height: 100%;
+  height: 200px;
+  object-position: center;
   object-fit: cover;
   transition: transform 0.3s ease;
 }
@@ -32,23 +33,28 @@
 }
 
 .restaurant-name {
-  font-size: 1.2rem;
-  margin-bottom: 8px;
+  font-size: 1rem;
   color: #333;
+  max-height: 50px;
+  overflow: hidden;
 }
 
 .rating-delivery-time {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
-.restaurant-rating {
+.rating-delivery-time .restaurant-rating {
+  margin-bottom: 0px;
+}
+
+.restaurant-rating,
+.delivery-time {
   display: flex;
   align-items: center;
   gap: 5px;
-  margin-bottom: 10px;
   color: #666;
 }
 
@@ -60,18 +66,18 @@
   color: #ccc;
 }
 
-.delivery-time {
-  display: flex;
-  align-items: center;
-  color: #666;
-  gap: 5px;
-}
-
 .restaurant-description {
   font-size: 0.9rem;
   color: #666;
   margin-bottom: 15px;
   line-height: 1.5;
+  max-height: 25px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .view-menu-btn {
@@ -82,6 +88,23 @@
   border-radius: 4px;
   font-weight: 500;
   transition: background-color 0.3s ease;
+  width: 100%;
+  text-align: center;
+  margin-top: auto;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 0.9rem;
+  border: none;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-transform: uppercase;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  line-height: 1.5;
+  background-image: linear-gradient(to right, #e63946, #d62b39);
+  background-size: 200% auto;
+  background-position: left center;
+  transition: background-position 0.5s ease;
 }
 
 .view-menu-btn:hover {
