cart page ui and other errors fix

--- a/src/components/restaurant-card/restaurant-card.css
+++ b/src/components/restaurant-card/restaurant-card.css
@@ -35,7 +35,8 @@
 .restaurant-name {
   font-size: 1rem;
   color: #333;
-  max-height: 50px;
+  height: fit-content;
+  max-height: 40px;
   overflow: hidden;
 }
 
